--- a/notebooks/regression_based_approach_copy.ipynb
+++ b/notebooks/regression_based_approach_copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "[48000 rows x 10 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,33 +404,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|█| 50/50 [02:45<00:00,  3.30s/trial, b\n",
+      "100%|█| 50/50 [02:51<00:00,  3.43s/trial, b\n",
       "Best parameters: \n",
       "eta 0.031067719583302122\n",
       "gamma 0.6239296575409805\n",
-      "max_depth 10\n",
+      "max_depth 13\n",
       "min_child_weight 0.360699687865366\n",
-      "sampling_method 0\n",
+      "sampling_method gradient_based\n",
       "subsample 0.0038370187252436128\n"
      ]
     }
    ],
    "source": [
     "# setting the space\n",
+    "max_depth = np.arange(3, 20, dtype=int)\n",
+    "sampling_method = ['gradient_based', 'uniform']\n",
     "xgb_fspace = {\n",
     "    'eta':hp.uniform('eta', 0.01, 1),\n",
     "    'gamma':hp.uniform('gamma', 0.01, 1),\n",
-    "    'max_depth':hp.choice('max_depth', np.arange(3, 20, dtype=int)),\n",
+    "    'max_depth':hp.choice('max_depth', max_depth),\n",
     "    'min_child_weight': hp.uniform('min_child_weight', 0, 1),\n",
     "    'subsample': hp.uniform('subsample', 0, 1), \n",
-    "    'sampling_method': hp.choice('sampling_method', ['gradient_based', 'uniform'])\n",
+    "    'sampling_method': hp.choice('sampling_method',sampling_method)\n",
     "}\n",
     "\n",
     "xgb_accuracy = lambda x:model_accuracy(x,model=XGBRegressor,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
@@ -440,7 +442,8 @@
     "    space=xgb_fspace,\n",
     "    algo=tpe.suggest,\n",
     "    max_evals=50, trials=trials, rstate=np.random.RandomState(0))\n",
-    "\n",
+    "best_xgb['sampling_method']=sampling_method[best_xgb['sampling_method']]\n",
+    "best_xgb['max_depth']=max_depth[best_xgb['max_depth']]\n",
     "print('Best parameters: ')\n",
     "for param in best_xgb:\n",
     "    print(param, best_xgb[param])"
@@ -448,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +466,7 @@
        "                                            gpu_id=None, importance_type='gain',\n",
        "                                            interaction_constraints=None,\n",
        "                                            learning_rate=None,\n",
-       "                                            max_delta_step=None, max_depth=10,\n",
+       "                                            max_delta_step=None, max_depth=13,\n",
        "                                            min_child_weight=0.360699687865366,\n",
        "                                            missing=nan,\n",
        "                                            monotone_constraints=None,\n",
@@ -471,7 +474,8 @@
        "                                            num_parallel_tree=None,\n",
        "                                            objective='reg:squarederror',\n",
        "                                            random_state=42, reg_alpha=None,\n",
-       "                                            reg_lambda=None, sampling_method=0,\n",
+       "                                            reg_lambda=None,\n",
+       "                                            sampling_method='gradient_based',\n",
        "                                            scale_pos_weight=None,\n",
        "                                            subsample=0.0038370187252436128,\n",
        "                                            tree_method=None,\n",
@@ -480,7 +484,7 @@
        "                     n_jobs=None)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,22 +498,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "104.4903269204074"
+       "105.47558197530654"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_xgb - y_val)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|█| 50/50 [03:59<00:00,  4.79s/trial, b\n",
+      "Best parameters: \n",
+      "max_depth 4\n",
+      "max_features 4\n",
+      "n_estimators 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_features=np.arange(1,5,dtype=int)\n",
+    "n_estimators=np.arange(100,201,50)\n",
+    "rf_fspace = {\n",
+    "    'max_depth':hp.choice('max_depth', max_depth),\n",
+    "    'max_features': hp.choice('max_features', max_features),\n",
+    "    'n_estimators': hp.choice('n_estimators',n_estimators )\n",
+    "}\n",
+    "\n",
+    "rf_accuracy = lambda x:model_accuracy(x,model=RandomForestRegressor,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
+    "trials = Trials()\n",
+    "best_rf = fmin(\n",
+    "    fn=rf_accuracy,\n",
+    "    space=rf_fspace,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=50, trials=trials, rstate=np.random.RandomState(0))\n",
+    "best_rf['max_features']=max_features[best_rf['max_features']]\n",
+    "best_rf['n_estimators']=n_estimators[best_rf['n_estimators']]\n",
+    "best_rf['max_depth']=max_depth[best_rf['max_depth']]\n",
+    "print('Best parameters: ')\n",
+    "for param in best_rf:\n",
+    "    print(param, best_rf[param])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiOutputRegressor(estimator=RandomForestRegressor(bootstrap=True,\n",
+       "                                                     ccp_alpha=0.0,\n",
+       "                                                     criterion='mse',\n",
+       "                                                     max_depth=4,\n",
+       "                                                     max_features=4,\n",
+       "                                                     max_leaf_nodes=None,\n",
+       "                                                     max_samples=None,\n",
+       "                                                     min_impurity_decrease=0.0,\n",
+       "                                                     min_impurity_split=None,\n",
+       "                                                     min_samples_leaf=1,\n",
+       "                                                     min_samples_split=2,\n",
+       "                                                     min_weight_fraction_leaf=0.0,\n",
+       "                                                     n_estimators=200,\n",
+       "                                                     n_jobs=None,\n",
+       "                                                     oob_score=False,\n",
+       "                                                     random_state=42, verbose=0,\n",
+       "                                                     warm_start=False),\n",
+       "                     n_jobs=None)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_rf = MultiOutputRegressor(RandomForestRegressor(**best_rf,random_state=42))\n",
+    "\n",
+    "model_rf.fit(X_train, y_train)\n",
+    "predicted_rf = model_rf.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "103.4035601555301"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_rf - y_val)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "numeric = ['Server-RSSI-1', 'Server-RSSI-2', 'Server-RSSI-3', 'Server-RSSI-4','Server-RSSI-5']\n",
+    "X_train[numeric] = scaler.fit_transform(X_train[numeric])\n",
+    "X_test[numeric] = scaler.transform(X_test[numeric])\n",
+    "X_val[numeric] = scaler.transform(X_val[numeric])\n",
+    "y_scaler = MinMaxScaler()\n",
+    "y_train = y_scaler.fit_transform(y_train)\n",
+    "y_val = y_scaler.transform(y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiOutputRegressor(estimator=LinearRegression(copy_X=True, fit_intercept=True,\n",
+       "                                                n_jobs=None, normalize=True),\n",
+       "                     n_jobs=None)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_linear = MultiOutputRegressor(LinearRegression(normalize=True))\n",
+    "\n",
+    "model_linear.fit(X_train, y_train)\n",
+    "predicted_linear = model_linear.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112.67002277209949"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(y_scaler.inverse_transform(predicted_linear)-y_scaler.inverse_transform(y_val))))"
    ]
   },
   {
@@ -521,28 +687,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4%| | 2/50 [00:04<01:41,  2.12s/trial, be"
+      " 70%|▋| 7/10 [09:03<03:50, 76.97s/trial, be"
      ]
     }
    ],
    "source": [
-    "rf_fspace = {\n",
-    "    'max_depth':hp.choice('max_depth', np.arange(3, 20, dtype=int)),\n",
-    "    'max_features': hp.choice('max_features', np.arange(1,5,dtype=int)),\n",
-    "    'n_estimators': hp.choice('n_estimators', np.arange(100,201,50)),\n",
-    "    'criterion': hp.choice('criterion', [\"mse\",\"mae\"])\n",
+    "kernel=[\"poly\", \"rbf\"]\n",
+    "gamma=['scale', 'auto']\n",
+    "svm_fspace = {\n",
+    "    'kernel': hp.choice('kernel',kernel),\n",
+    "    'gamma': hp.choice('gamma',gamma),\n",
+    "    'C':hp.uniform('C', 1, 10),\n",
+    "    \n",
     "}\n",
     "\n",
-    "rf_accuracy = lambda x:model_accuracy(x,model=RandomForestRegressor,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
+    "svm_accuracy = lambda x:model_accuracy(x,model=SVR,train_data=X_train,train_labels=y_train,cv_data=X_val,cv_labels=y_val)\n",
     "trials = Trials()\n",
-    "best_rf = fmin(\n",
-    "    fn=rf_accuracy,\n",
-    "    space=rf_fspace,\n",
+    "best_svm = fmin(\n",
+    "    fn=svm_accuracy,\n",
+    "    space=svm_fspace,\n",
     "    algo=tpe.suggest,\n",
-    "    max_evals=50, trials=trials, rstate=np.random.RandomState(0))\n",
-    "\n",
+    "    max_evals=10, trials=trials, rstate=np.random.RandomState(0))\n",
+    "best_svm['kernel']=kernel[best_svm['kernel']]\n",
+    "best_svm['gamma']=gamma[best_svm['gamma']]\n",
     "print('Best parameters: ')\n",
-    "for param in best_rf:\n",
+    "for param in best_svm:\n",
     "    print(param, best_rf[param])"
    ]
   },
@@ -552,75 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_rf = MultiOutputRegressor(RandomForestRegressor(**best_rf,random_state=42))\n",
-    "\n",
-    "model_rf.fit(X_train, y_train)\n",
-    "predicted_rf = model_rf.predict(X_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_rf - y_val)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = MinMaxScaler()\n",
-    "numeric = ['Server-RSSI-1', 'Server-RSSI-2', 'Server-RSSI-3', 'Server-RSSI-4','Server-RSSI-5']\n",
-    "X_train[numeric] = scaler.fit_transform(X_train[numeric])\n",
-    "X_test[numeric] = scaler.transform(X_test[numeric])\n",
-    "X_val[numeric] = scaler.transform(X_val[numeric])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_linear = MultiOutputRegressor(LinearRegression())\n",
-    "\n",
-    "model_linear.fit(X_train, y_train)\n",
-    "predicted_linear = model_linear.predict(X_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.mean(np.apply_along_axis(lambda x: (x[0]**2 + x[1]**2)**0.5, 1, np.abs(predicted_linear - y_val)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_fspace = {\n",
-    "    'kernel': hp.choice('criterion', [\"poly\", \"rbf\"]),\n",
-    "    'gamma': hp.chooice('gamma',['scale', 'auto']),\n",
-    "    \n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_svm = MultiOutputRegressor(SVR())\n",
+    "model_svm = MultiOutputRegressor(SVR(**best_svm))\n",
     "\n",
     "model_svm.fit(X_train, y_train)\n",
     "predicted_svm = model_svm.predict(X_val)"
